--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             emailjs.init("x7K0Q08mVYFVB9sBm");
         })();
     </script>
-    <title>Ratna Rajiv Mulpuri Personal Portfolio Website</title>
+    <title>Ratna Rajiv Mulpuri</title>
 </head>
 <body class="dark-mode">
     <header class="header">
-        <a href="#" class="logo">Resume Website</a>
+        <a href="#" class="logo">RRM</a>
         <i id="menu-icon" class="fa-solid fa-bars" style="color: #e8eaed;"></i>
         <nav class="navbar">
             <button id="toggle-mode" class="btn"><i class="fa-solid fa-circle-half-stroke"></i></button>
@@ -38,9 +38,8 @@
             </p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/rrmulpuri/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
-                <a href="https://github.com/rajiv6741"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="#" class="btn">Download Resume</a>
+            <a href="" class="btn">Download Resume</a>
         </div>
 
         <div class="home-img">
