--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/rrmulpuri/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                <a href="https://github.com/rajiv6741"><i class="fa-brands fa-github"></i></a>
             </div>
-            <a href="Ratna Rajiv Mulpuri new.pdf" class="btn">Download Resume</a>
+            <a href="Ratna Rajiv Mulpuri new.pdf" class="btn" download>Download Resume</a>
         </div>
-
         <div class="home-img">
             <img src="Profile.png" alt="">
         </div>
@@ -143,7 +143,7 @@
             </div>
             <div class="education-item">
                 <div class="education-text">
-                    <h3>Bachelor of Technology in Computer Science</h3>
+                    <h3>Bachelor of Technology in Computer Science</h4>
                     <h4>Vellore Institute of Technology, Amaravathi</h4>
                     <p>July 2018 - June 2022</p>
                 </div>
