--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/rrmulpuri/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
             </div>
-            <a href="Ratna Rajiv Mulpuri new.pdf" class="btn" download>Download Resume</a>
+            <a href="Ratna Rajiv Mulpuri new.pdf" class="btn">Download Resume</a>
         </div>
         <div class="home-img">
             <img src="Profile.png" alt="">
