--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <footer class="footer">
             <div class="footer-text">
-                <p>Copyright &copy; 2024 by Ratna Rajiv Mulpuri | All Rights Reserved. </p>
+                <p>Made by Ratna Rajiv Mulpuri | All Rights Reserved. </p>
             </div>
             <div class="footer-iconTop">
                 <a href="#home"><i class="fa-solid fa-arrow-up fa-bounce"></i></a>
