--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <h1>Ratna Rajiv Mulpuri</h1>
             <h3>I'm a <span class="multiple-text"></span></h3>
             <p>
-                I am Ratna Rajiv Mulpuri, a skilled software developer with a Master's in Computer Science from UCF and a Bachelor's in Information Technology from Vellore Institute of Technology. With experience as a Software Developer Intern at VOXAI, I have expertise in monitoring critical applications, resolving incidents, and optimizing systems for high-profile clients. Proficient in Java, R, HTML, CSS3, JavaScript, and tools like Eclipse, Git, and ServiceNow, I have successfully led projects in AWS cloud solutions and database management. I hold an AWS Certified Solutions Architect - Associate certification.
+            I am Ratna Rajiv Mulpuri, a skilled software developer and data engineer with a Master’s in Computer Science from the University of Central Florida and a Bachelor’s in Information Technology from Vellore Institute of Technology. With hands-on experience as a Software Developer Intern at VOXAI and a Data Engineering Intern at Nextpoint, I have developed expertise in monitoring critical applications, resolving incidents, optimizing systems, and building scalable data pipelines. At Nextpoint, I contributed to developing and optimizing ETL pipelines using AWS, Databricks, and Python, ensuring efficient data integration and management for big data solutions. I also performed debugging, data sanity checks, and troubleshooting to resolve issues with job processing and data quality. Proficient in Java, R, HTML, CSS3, JavaScript, Spark, and tools like Eclipse, Git, ServiceNow, and Databricks, I have successfully led projects involving AWS cloud solutions, database management, and business intelligence. I hold the AWS Certified Solutions Architect – Associate certification, showcasing my expertise in designing and implementing cloud-based architectures. Whether building robust software systems or crafting data-driven solutions, I am passionate about leveraging technology to solve complex challenges.
+
             </p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/rrmulpuri/"><i class="fa-brands fa-linkedin fa-lg"></i></a>
@@ -55,9 +56,9 @@
             <h2 class="heading">ABOUT <span>ME</span></h2>
             <h3>Software Developer</h3>
             <p>
-                I am Ratna Rajiv Mulpuri, a dedicated and skilled software developer with a Master's degree in Computer Science from the University of Central Florida and a Bachelor's degree in Information Technology from Vellore Institute of Technology. With a solid academic foundation and hands-on experience as a Software Developer Intern at VOXAI, I have developed a strong expertise in monitoring and optimizing critical applications, resolving incidents, and improving system performance.
-                My technical proficiency spans across a variety of tools and frameworks, including Eclipse, VS Code, Git, and ServiceNow, as well as programming languages like Java, R, MATLAB, HTML, CSS3, and JavaScript. I have successfully led projects involving cloud solutions and database management, and I am an AWS Certified Solutions Architect - Associate.
-                I am passionate about leveraging my skills to solve complex problems and deliver efficient, scalable solutions. My goal is to continue growing in the field of software development, contributing to innovative projects, and making a positive impact through technology.
+               I am Ratna Rajiv Mulpuri, a dedicated and skilled software developer and data engineer with a Master’s degree in Computer Science from the University of Central Florida and a Bachelor’s degree in Information Technology from Vellore Institute of Technology. With a solid academic foundation and hands-on experience as a Software Developer Intern at VOXAI and a Data Engineering Intern at Nextpoint, I have honed my ability to monitor and optimize critical applications, resolve incidents, and improve system performance.
+
+During my time at
             </p>
             <div id="more-about" class="more-content">
                 <p>
@@ -110,8 +111,28 @@
 
     <section class="experience" id="experience">
         <div class="experience-content">
+            
             <h2 class="heading">My <span>Experience</span></h2>
-            <h3>Software Developer Intern</h3>
+
+            <h2 class="heading">My <span>Experience</span></h2>
+
+            <h3>Data Engineering Intern</h3>
+<p>
+    During my internship at Nextpoint, I gained extensive experience in building and optimizing data engineering solutions, contributing to the development of scalable ETL pipelines and ensuring data quality and system performance. My key responsibilities included:
+</p>
+<ul>
+    <li><strong>ETL Pipeline Development:</strong> Designed and optimized data pipelines using Databricks and AWS services to support large-scale data integration and analysis, reducing data processing time by 25%.</li>
+    <li><strong>Data Quality and Sanity Checks:</strong> Wrote SQL queries and Python scripts to validate and ensure the accuracy of data across multiple layers, identifying and resolving inconsistencies in datasets.</li>
+    <li><strong>Performance Debugging:</strong> Investigated and resolved issues causing null values in job outputs and optimized job runtimes, improving overall data pipeline efficiency.</li>
+    <li><strong>Cloud-Based Solutions:</strong> Utilized AWS services, including S3 and Lambda, to automate data extraction, transformation, and storage, enhancing system scalability and reliability.</li>
+    <li><strong>Collaboration and Documentation:</strong> Worked closely with cross-functional teams to identify bottlenecks, document ETL processes, and ensure alignment with organizational data strategies.</li>
+</ul>
+<p>
+    This role allowed me to strengthen my skills in data engineering, cloud computing, and debugging, while contributing to innovative and reliable solutions in a dynamic environment.
+</p>
+
+            
+            <h3>Managed Services Intern</h3>
             <p>
                 During my internship at VOXAI, I gained hands-on experience in monitoring and optimizing critical applications responsible for handling mobile/phone services for high-profile clients, including American Airlines. My key responsibilities included:
             </p>
