--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
 
         <section class="experience" id="experience">
-            <h2 class="heading">My <span>Experience</span></h2>
+            <h2 class="heading"> </h2>
             <!-- Nextpoint -->
             <h3>Data Engineering Intern</h3>
             <ul>
