--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ During my time at
 
         <footer class="footer">
             <div class="footer-text">
-                <p>Made by Ratna Rajiv Mulpuri | All Rights Reserved. </p>
+                <p>Made by Ratna Rajiv Mulpuri with love. </p>
             </div>
             <div class="footer-iconTop">
                 <a href="#home"><i class="fa-solid fa-arrow-up fa-bounce"></i></a>
